--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>2dnav</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" media="screen" href="dist/main.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="./dist/main.css" />
   <!-- <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script> -->
   <script src="https://cdn.jsdelivr.net/npm/vue"></script>
 </head>
@@ -32,6 +32,6 @@
       @keydown="onKeyDown"
     ></canvas>
   </div>
-  <script src="dist/main.js"></script>
+  <script src="./dist/main.js"></script>
 </body>
 </html>
